

syntax = "proto3";
package ingestion;

service Ingestion {
  rpc connect_db(Connection) returns (ConnectDbResponse);
  rpc test_connection(Connection) returns (ConnectionResponse);
}

enum ConnectionType {
  postgres = 0;
  snowflake = 1;
  databricks = 2;
}

message ConnectDbResponse {
  bool isOk = 1;
  string error = 2;
}

message Connection {
  ConnectionType connection_type = 1;
  ConnectionAuth detail = 2;
}

message ConnectionAuth {
  string database = 1;
  string user = 2;
  string host = 3;
  string port = 4;
  string name = 5;
  string password = 6;
}
message ConnectionErrorResponse {
  string error_message = 1;
}
message ConnectionResponse {
  oneof response {
    ConnectionErrorResponse error = 1;
    ConnectionDetails success = 2;
  }
}

message ConnectionDetails {
  repeated TableInfo table_info = 1;
}

message TableInfo {
  string table_name = 1;
  repeated ColumnInfo columns = 2;
}
message ColumnInfo {
  string column_name = 1;
  string is_nullable = 2;
  string udt_name = 3;
  bool is_primary_key = 4;
}
